--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -27,9 +27,8 @@
                 top:0px;
                 float:left;
                position: static;
-               background-image: url("http://www.wall321.com/thumbnails/detail/20120623/abstract%20blue%20dark%20textures%20backgrounds%201920x1080%20wallpaper_www.wall321.com_11.jpg");
-                background-repeat: repeat;   
-                
+               background-image: url("http://www.siwallpaperhd.com/wp-content/uploads/2015/06/black_desktop_wallpaper_hd_1.jpg");
+               background-repeat: repeat;              
 
             }
             #pro_pic    {
@@ -148,12 +147,56 @@
                 color: black;
                 font-size: 12px !important;
             }
+
+            .tags input.focused {
+                border-bottom: 1px red !important;
+            }
             .bootstrap .tags {
-                border-radius: 0px;
+                    border-radius: 0px !important;
+                    font-size: 12px;
+                    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+                    border: 1px solid white !important;
+                    box-shadow: 0px 1px 1px white inset !important;
+            }
+
+
+
+            .bootstrap .tags.focused {
+                    border-radius: 0px;
+                    font-size: 12px;
+                    border-top:0px white !important;
+                    border-left:0px white !important;
+                    border-right:0px white !important;
+                    border-bottom: 1px solid #0000ff !important;
+                    box-shadow: none !important;
+                    
+                    
             }
             .form-group input   {
-                color: black;
-                border-bottom: 1px solid #999999 !important;
+                border-color: none;
+                border-style: solid;
+                border-bottom-color: rgba(255,255,255,0.1);
+                border-bottom-width: 3px;
+
+
+                     
+                font-size: 13px !important;
+                background: rgba(255, 255, 255, 0.005) none repeat scroll 0% 0%;
+                color: white;  
+                border-radius: 0px !important;
+                transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+                
+            }
+            .form-group input:focus{
+                    border-radius: 0px;
+                    font-size: 12px;
+                    border-top:0px white !important;
+                    border-left:0px white !important;
+                    border-right:0px white !important;
+                    border-bottom: 1px solid #0000ff !important;
+                    box-shadow: none;
+                    background: rgba(255, 255, 255, 0.005) none repeat scroll 0% 0%;
+                color: white; 
             }
             .upld_form  {
                 width: 100% !important;
@@ -267,8 +310,8 @@
                 
             }
             #stages_list {
-                background-color: rgba(255,255,255,0.3);
-                border-bottom: 5px double #0f6f84;
+                background-color: white;
+                border-bottom: 2px double white;
                 
               /*  position: absolute;*/
                 width: 100%;
@@ -378,7 +421,9 @@
             }
 
 
-            textarea{  
+            #textarea{ 
+            background: rgba(255, 255, 255, 0.005) none repeat scroll 0% 0%;
+color: white; 
   display:block;
   box-sizing: padding-box;
   overflow:hidden;
