--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -174,11 +174,11 @@
 <!--***********************************upload section******************************************-->
 	        								
 
-<div class="booking_body">
+<!--<div class="booking_body">
 	<div id="upload" class="modal img_modal fade" role="dialog">
 		<div class="modal-dialog img_modal-dialog">
 
-						<!-- Modal content-->
+						<!-- Modal content
 					      
 							
 			<div class="modal-body img_modal-body centric">
@@ -200,7 +200,7 @@
 						<div class="tab-pane fade in active" id="upload_form" ng-controller="UploadPortalCtrl">
 							<div class="tab-content">
 
-											<!--************Video Upload Form********-->
+											<!--************Video Upload Form********
 								<div id="video_form" class="tab-pane fade in active" >
 									<form name="form" ng-submit="videoSubmit(form)" ng-model="form">
 										<div class="tab-content">
@@ -220,7 +220,7 @@
 															
 													<input type="text" class="form-control upld_form" ng-model="form.posterUrl" placeholder="Poster Url">
 												</div>
-												<div class="form-group"> <!-- Put text area -->
+												<div class="form-group"> <!-- Put text area 
 													<textarea class='autoExpand form-control' rows='3' data-min-rows='3' placeholder='Description' id="textarea" style="width:100%" ng-model="form.description" data-bind="hasfocus: true">
 			                						</textarea>
 															
@@ -278,7 +278,7 @@
 				            <div ng-message="required">You <b>must</b> have a favorite state.</div>
 				            <div ng-message="minlength">Your entry is not long enough.</div>
 				            <div ng-message="maxlength">Your entry is too long.</div>
-				          </div>-->
+				          </div>--
 
 				        </md-autocomplete>
 				      </div>
@@ -320,7 +320,7 @@
 										    </form>
 										   	</div>
 										
-												<!--***************Article Upload form**************-->
+												<!--***************Article Upload form**************--
 
 												<div id="article_form"  class="tab-pane fade">
 												<form name="form" ng-submit="articleSubmit(form)" ng-model="form">
@@ -394,7 +394,7 @@
 												</form>
 												</div>
 
-												<!--**********Image Upload Form******************-->
+												<!--**********Image Upload Form******************--
 
 												<div id="img_form"  class="tab-pane fade">
 												<form name="form" ng-submit="imageSubmit(form)" ng-model="form" >
@@ -526,7 +526,7 @@
 						</div>
 					</div>
 				
-
+-->
 <!--********************************upload section closes***********************************-->
 
 
