--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -63,7 +63,7 @@
                     <form name="form" ng-submit="bookPost()" ng-model="form" >
                    		<div class="col-md-6 datepckr">
                             <p class="input-group">
-                                <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="openedSD" min-date="minDate" max-date="' + '"2037-06-22"' + '" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" />
+                                <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="openedSD" min-date="minDate" max-date="' + '"2037-06-22"' + '" datepicker-options="dateOptions"  ng-required="true" close-text="Close" style="height:34px" />
                                 <span class="input-group-btn">
                                     <button type="button" class="btn btn-default" ng-click="openSD($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                 </span>
@@ -104,7 +104,7 @@
 		          	<div ng-controller="DatepickerDemoCtrl">
 		          		<div class="col-md-6 datepckr">
 				            <p class="input-group">
-					            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtSD" is-open="openedSD" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" />
+					            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtSD" is-open="openedSD" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="true" close-text="Close" style="height:34px" />
 								<span class="input-group-btn">
 								    <button type="button" class="btn btn-default" ng-click="openSD($event)"><i class="glyphicon glyphicon-calendar"></i></button>
 								</span>
@@ -117,7 +117,7 @@
 	          		<div ng-controller="DatepickerDemoCtrl">
 		          		<div class="col-md-6 datepckr">
 				            <p class="input-group">
-					            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtED" is-open="openedED" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" />
+					            <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtED" is-open="openedED" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="true" close-text="Close" style="height:34px" />
 								<span class="input-group-btn">
 								    <button type="button" class="btn btn-default" ng-click="openED($event)"><i class="glyphicon glyphicon-calendar"></i></button>
 								</span>
@@ -155,7 +155,7 @@
 						       		<div class="modal-body img_modal-body centric glassy">
 												 <div class="col-md-6 datepckr">
 										            <p class="input-group">
-										              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" />
+										              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="true" close-text="Close" style="height:34px" />
 										              <span class="input-group-btn">
 										                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
 										              </span>
