--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,6 @@
-
+<div id="nav_fade">
+  <img src="http://www.rottweilerheartsrescue.org/Images/fade2black.png" width="100%" height="200px">
+</div>
 <div id="top_logo" ng-controller="NavbarCtrl">
     <div id="logo">
         <a href="/" id="_logo"><span>Vedik</span></a>
