--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -1,13 +1,18 @@
-            
+            .box_shadow_dwn {
+                box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+            }
+            .box_shadow_up {
+                box-shadow: -2px -2px 5px 0px rgba(0, 0, 0, 0.16), 0px -2px 10px 0px rgba(0, 0, 0, 0.12);
+            }
             #banner {
                     margin:0px;
                     text-align:left;
             }
             #user_profile   {
-                margin:0px auto 0px;
+               
                 
-                position: absolute;
-                top:10%;
+                position: fixed;
+                top:80px;
                 left:2%;
                 z-index: 1;
                 background-color: white;
@@ -58,8 +63,8 @@
 
             }
             #upload_btn     {
-                position: absolute;
-                top: 10%;
+                position: fixed;
+                top: 80px;
                 right: 2%;
            
                 
@@ -76,8 +81,8 @@
                 padding: 0px;
             }
             #HOF_div    {
-                position: absolute;
-                top: 30%;
+                position: fixed;
+                top: 200px;
                 left: 2%;
                 font-weight: bold;
                 box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
@@ -380,10 +385,9 @@
                 padding: 0px 0px 100px;
             }
             #user_hist_div1  {
-               background-image: url("http://www.siwallpaperhd.com/wp-content/uploads/2015/06/black_desktop_wallpaper_hd_1.jpg");
-               
-
-                position: static;
+                    background-image: url("http://www.siwallpaperhd.com/wp-content/uploads/2015/06/black_desktop_wallpaper_hd_1.jpg");
+                z-index: 100;
+                position: relative;
                  
             }
             li  {
