--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,12 +1,10 @@
-<div id="nav_fade">
-  <img src="http://www.rottweilerheartsrescue.org/Images/fade2black.png" width="100%" height="200px">
-</div>
+
 <div id="top_logo" ng-controller="NavbarCtrl">
     <div id="logo">
         <a href="/" id="_logo"><span>Vedik</span></a>
     </div>
     
-    <div id="search">
+    <div id="search" ng-show="isLoggedIn()">
         <span class=" glyphicon glyphicon-search" style="position:absolute;top:16px;left:55px"></span>
         <input type="text" class="form-control" ng-model="searchQuery" ng-change="change()">
         <div id="search_res">
@@ -55,7 +53,7 @@
          </div>
     </div>
 
-         <div class="container">                                         
+         <div class="container" ng-show="isLoggedIn()">                                         
               <div style="position:relative;width:300px;margin:0px 20px">
                 <button class="btn btn-primary" type="button" style="margin:6.5px 0px;background:none;border:0px"  ng-click="showNotif=!showNotif">
                   <span class="glyphicon glyphicon-envelope" ><span style="font-size:10px;padding:2px">{{posts.length}}</span></span>
