displaying correct posts, all uploads working, event attend working

--- a/client/app/event/event.css
+++ b/client/app/event/event.css
@@ -85,6 +85,10 @@
    	}
    	.e_host	{
    		font-size: 14px;
-   		color: black;
+   		color: white;
    		opacity: 0.5;
+   	}
+   	.light_text_shadow{
+   		color: white;
+   		text-shadow:1px 1px 2px grey, -1px -1px 2px black;
    	}
