--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,25 @@
 
 <div id="top_logo" ng-controller="NavbarCtrl">
+
+    <script type="text/javascript">
+      $(document).ready(function() {
+
+        $(window).scroll(function () {
+            //if you hard code, then use console
+            //.log to determine when you want the 
+            //nav bar to stick. 
+            var height=$(window).height(); 
+            console.log($(window).scrollTop())
+          if ($(window).scrollTop() > (height-45)) {
+            $('#top_logo').addClass('top_logo_sec');
+          }
+          if ($(window).scrollTop() < (height-44)) {
+            $('#top_logo').removeClass('top_logo_sec');
+          }
+        });
+      });
+    </script>
+
     <div id="logo">
         <a href="/" id="_logo"><span>Vedik</span></a>
     </div>
